--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^24.0.15",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "jest": "^24.8.0",
